@@ -2,7 +2,9 @@ Version 4.1-2
 
  o Effect methods for clm, clm2, and clmm models were not correctly passing the estimated theshholds to polr for computing effects (error reported by Stefan Th. Gries).  
  
- o Updated "Defining Effects Methods ..." vignette to reflect revisions to Effect.clm, Effect.clm2 and Effect.clmm
+ o Updated "Defining Effects Methods ..." vignette to reflect revisions to Effect.clm, Effect.clm2 and Effect.clmm.
+ 
+ o Fixed a bug in plot.eff() (reported by Julian Gaviria Lopez) that applied drop.levels() to character or logical predictors.
 
 Version 4.1-1
  
